# DnDCharacterTool

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  ETL_USAGE.md  README.md  data_alignment_recommendations.md  data_import_progress.md  data_mapping_summary.md  etl_plan.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
characters/: admin.py  frontend_views.py  models.py  serializers.py  services.py  urls.py  utility_views.py  viewsets.py
characters/management/commands/: test_calculations.py
characters/migrations/: 0001_initial.py  0002_initial.py
characters/services/: __init__.py  calculation_service.py  dice_service.py  recommendation_service.py  validation_service.py
core/: urls.py
data_script/: dnd-data-scraper.py
data_script/dnd_data/: _summary.json  backgrounds.json  classes.json  equipment.json  feats.json  languages.json  races.json  skills.json  spells.json
dnd_character_creator/: asgi.py  urls.py  wsgi.py
dnd_character_creator/settings/: base.py  local.py  production.py
game_content/: admin.py  apps.py  models.py  serializers.py  viewsets.py
game_content/management/commands/: base_importer.py  import_backgrounds.py  import_classes.py  import_dnd_data.py  import_dnd_data_sample.py  import_equipment.py  import_feats.py  import_json_data.py  import_languages.py  import_skills.py  import_species.py  import_spells.py  link_relationships.py
game_content/migrations/: 0001_initial.py
prompts/: char-guide-output.md  claude-code-todo.md  claude_code_prompt.md  dnd-char-creation-guide.md  dnd-user-journey.md  prompt_and_output_user_journey.md  prompt_dnd-char-creation-guide.md
static/css/: main.css
static/js/: main.js
templates/base/: base.html  character_wizard.html
templates/components/: navigation.html  progress_indicator.html
templates/pages/: browse_content.html  character_list.html  step1_class.html  step2_origin.html  step3_abilities.html  step4_alignment.html  step5_equipment.html  step6_details.html  tools.html
users/: admin.py  models.py  serializers.py  urls.py  views.py  viewsets.py
users/migrations/: 0001_initial.py
